--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Article.cs" />
+    <Compile Include="Bed.cs" />
     <Compile Include="Content.cs" />
     <Compile Include="ContentService.cs" />
     <Compile Include="DBMessage.cs" />
@@ -51,10 +52,13 @@
     <Compile Include="Entity.cs" />
     <Compile Include="FactoryContext.cs" />
     <Compile Include="HelpMoney.cs" />
+    <Compile Include="IAgree.cs" />
     <Compile Include="IChat.cs" />
+    <Compile Include="IDisagree.cs" />
     <Compile Include="ISendMessage.cs" />
     <Compile Include="MimicStack.cs" />
     <Compile Include="Problem.cs" />
+    <Compile Include="Problemzongjie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repoistory.cs" />
