--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Repoistory.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Suggest.cs" />
+    <Compile Include="TokenManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
