--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Entity.cs" />
     <Compile Include="FactoryContext.cs" />
     <Compile Include="HelpMoney.cs" />
+    <Compile Include="HelpMoneyChangedAttribute.cs" />
     <Compile Include="IAgree.cs" />
     <Compile Include="IChat.cs" />
     <Compile Include="IDisagree.cs" />
@@ -62,13 +63,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repoistory.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="其他\Student.cs" />
+    <Compile Include="其他\DoubleLinked.cs" />
     <Compile Include="Suggest.cs" />
+    <Compile Include="其他\TimeEnum.cs" />
+    <Compile Include="Token.cs" />
     <Compile Include="TokenManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
