--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -43,32 +43,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Article.cs" />
-    <Compile Include="Bed.cs" />
-    <Compile Include="Content.cs" />
-    <Compile Include="ContentService.cs" />
-    <Compile Include="DBMessage.cs" />
-    <Compile Include="EmailMessage.cs" />
+    <Compile Include="作业\BeforeWork.cs" />
+    <Compile Include="作业\Work.cs" />
+    <Compile Include="文章\Article.cs" />
+    <Compile Include="其他\Bed.cs" />
+    <Compile Include="内容\Content.cs" />
+    <Compile Include="内容\ContentService.cs" />
+    <Compile Include="消息\DBMessage.cs" />
+    <Compile Include="消息\EmailMessage.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="FactoryContext.cs" />
-    <Compile Include="HelpMoney.cs" />
-    <Compile Include="HelpMoneyChangedAttribute.cs" />
+    <Compile Include="帮帮币\HelpMoney.cs" />
+    <Compile Include="帮帮币\HelpMoneyChangedAttribute.cs" />
     <Compile Include="IAgree.cs" />
-    <Compile Include="IChat.cs" />
+    <Compile Include="消息\IChat.cs" />
     <Compile Include="IDisagree.cs" />
-    <Compile Include="ISendMessage.cs" />
-    <Compile Include="MimicStack.cs" />
-    <Compile Include="Problem.cs" />
-    <Compile Include="Problemzongjie.cs" />
+    <Compile Include="消息\ISendMessage.cs" />
+    <Compile Include="其他\MimicStack.cs" />
+    <Compile Include="问题\Problem.cs" />
+    <Compile Include="问题\Problemzongjie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repoistory.cs" />
+    <Compile Include="其他\Date.cs" />
     <Compile Include="其他\Student.cs" />
     <Compile Include="其他\DoubleLinked.cs" />
     <Compile Include="Suggest.cs" />
     <Compile Include="其他\TimeEnum.cs" />
-    <Compile Include="Token.cs" />
-    <Compile Include="TokenManager.cs" />
+    <Compile Include="令牌\Token.cs" />
+    <Compile Include="令牌\TokenManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
