双向链表修改

--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -45,28 +45,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="作业\BeforeWork.cs" />
-    <Compile Include="作业\Work.cs" />
-    <Compile Include="文章\Appraise.cs" />
-    <Compile Include="文章\Article.cs" />
+    <Compile Include="test\BeforeWork.cs" />
+    <Compile Include="test\Work.cs" />
+    <Compile Include="其他\SomeArray.cs" />
+    <Compile Include="内容\文章\Appraise.cs" />
+    <Compile Include="内容\文章\Article.cs" />
     <Compile Include="其他\Bed.cs" />
     <Compile Include="内容\Content.cs" />
     <Compile Include="内容\ContentService.cs" />
-    <Compile Include="文章\Comment.cs" />
-    <Compile Include="文章\Keyword.cs" />
-    <Compile Include="消息\DBMessage.cs" />
-    <Compile Include="消息\EmailMessage.cs" />
+    <Compile Include="内容\文章\Comment.cs" />
+    <Compile Include="内容\文章\Keyword.cs" />
+    <Compile Include="内容\消息\EmailMessage.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="FactoryContext.cs" />
     <Compile Include="帮帮币\HelpMoney.cs" />
     <Compile Include="帮帮币\HelpMoneyChangedAttribute.cs" />
     <Compile Include="IAgree.cs" />
-    <Compile Include="消息\IChat.cs" />
+    <Compile Include="内容\消息\IChat.cs" />
     <Compile Include="IDisagree.cs" />
-    <Compile Include="消息\ISendMessage.cs" />
+    <Compile Include="内容\消息\ISendMessage.cs" />
     <Compile Include="其他\MimicStack.cs" />
-    <Compile Include="问题\Problem.cs" />
-    <Compile Include="问题\Problemzongjie.cs" />
+    <Compile Include="内容\问题\Problem.cs" />
+    <Compile Include="内容\问题\Problemzongjie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repoistory.cs" />
