--- a/Verification_Code/Verification_Code.csproj
+++ b/Verification_Code/Verification_Code.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3AB03171-C90C-4165-A242-2B400D43EEB9}</ProjectGuid>
+    <ProjectGuid>{CD1C8C6A-8501-4922-A729-4B6FBB7001E2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Csharp</RootNamespace>
-    <AssemblyName>Csharp</AssemblyName>
+    <RootNamespace>Verification_Code</RootNamespace>
+    <AssemblyName>Verification_Code</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,7 +31,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,45 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bitmap.cs" />
-    <Compile Include="test\BeforeWork.cs" />
-    <Compile Include="test\Work.cs" />
-    <Compile Include="其他\Person.cs" />
-    <Compile Include="其他\SomeArray.cs" />
-    <Compile Include="内容\文章\Appraise.cs" />
-    <Compile Include="内容\文章\Article.cs" />
-    <Compile Include="其他\Bed.cs" />
-    <Compile Include="内容\Content.cs" />
-    <Compile Include="内容\ContentService.cs" />
-    <Compile Include="内容\文章\Comment.cs" />
-    <Compile Include="内容\文章\Keyword.cs" />
-    <Compile Include="内容\消息\EmailMessage.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="FactoryContext.cs" />
-    <Compile Include="帮帮币\HelpMoney.cs" />
-    <Compile Include="帮帮币\HelpMoneyChangedAttribute.cs" />
-    <Compile Include="IAgree.cs" />
-    <Compile Include="内容\消息\IChat.cs" />
-    <Compile Include="IDisagree.cs" />
-    <Compile Include="内容\消息\ISendMessage.cs" />
-    <Compile Include="其他\MimicStack.cs" />
-    <Compile Include="内容\问题\Problem.cs" />
-    <Compile Include="内容\问题\Problemzongjie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repoistory.cs" />
-    <Compile Include="其他\Date.cs" />
-    <Compile Include="其他\Student.cs" />
-    <Compile Include="其他\DoubleLinked.cs" />
-    <Compile Include="Suggest.cs" />
-    <Compile Include="其他\TimeEnum.cs" />
-    <Compile Include="令牌\Token.cs" />
-    <Compile Include="令牌\TokenManager.cs" />
-    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
