--- a/Csharp/App.config
+++ b/Csharp/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Csharp.Properties.Settings.YQBang4ConnectionString"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=YQBang4;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
