--- a/SRV/MockService/MockService.csproj
+++ b/SRV/MockService/MockService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3F9DF19-98B4-4328-AEAA-B22BF032D4AB}</ProjectGuid>
+    <ProjectGuid>{ABDB43A6-724A-4804-9C91-28C86B8374C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SRV.ViewModel</RootNamespace>
-    <AssemblyName>SRV.ViewModel</AssemblyName>
+    <RootNamespace>SRV.MockService</RootNamespace>
+    <AssemblyName>SRV.MockService</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Article\NewModel.cs" />
-    <Compile Include="Article\SingleModel.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
