--- a/SRV/ServiceInterface/ServiceInterface.csproj
+++ b/SRV/ServiceInterface/ServiceInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{306A12C8-D979-49F0-BE3A-19F62949FCA4}</ProjectGuid>
+    <ProjectGuid>{79A8AF21-D673-49C0-9C41-381E9E7E37D7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SRV.MockService</RootNamespace>
-    <AssemblyName>SRV.MockService</AssemblyName>
+    <RootNamespace>ServiceInterface</RootNamespace>
+    <AssemblyName>ServiceInterface</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,7 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IArticleService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj">
+      <Project>{b3f9df19-98b4-4328-aeaa-b22bf032d4ab}</Project>
+      <Name>ViewModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
