--- a/SRV/ViewModel/ViewModel.csproj
+++ b/SRV/ViewModel/ViewModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{894B322B-F7EC-427D-B47F-E078815BCD1F}</ProjectGuid>
+    <ProjectGuid>{B3F9DF19-98B4-4328-AEAA-B22BF032D4AB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProdService</RootNamespace>
-    <AssemblyName>ProdService</AssemblyName>
+    <RootNamespace>SRV.ViewModel</RootNamespace>
+    <AssemblyName>SRV.ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,27 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticleService.cs" />
+    <Compile Include="Article\NewModel.cs" />
+    <Compile Include="Article\SingleModel.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="LogOnModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterModel.cs" />
+    <Compile Include="UserModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj">
-      <Project>{43b40386-4fd9-41b4-bf4b-1973445f52bc}</Project>
-      <Name>Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Repositories\Repositories.csproj">
-      <Project>{548868ec-60b8-492e-98a7-48eebce9d8b8}</Project>
-      <Name>Repositories</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ServiceInterface\ServiceInterface.csproj">
-      <Project>{4ba2f4c1-8b4b-4f3d-b7fc-38e5bc19aa52}</Project>
-      <Name>ServiceInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ViewModel\ViewModel.csproj">
-      <Project>{b3f9df19-98b4-4328-aeaa-b22bf032d4ab}</Project>
-      <Name>ViewModel</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
