--- a/SRV/ProdService/ProdService.csproj
+++ b/SRV/ProdService/ProdService.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArticleService.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseSerivce.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
