--- a/YQBangMVC/Web.config
+++ b/YQBangMVC/Web.config
@@ -61,4 +61,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="20bang" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=20bang;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
