--- a/SRV/ServiceInterface/ServiceInterface.csproj
+++ b/SRV/ServiceInterface/ServiceInterface.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="IArticleService.cs" />
+    <Compile Include="IKeywordService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
