--- a/SRV/ProdService/ProdService.csproj
+++ b/SRV/ProdService/ProdService.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ArticleService.cs" />
     <Compile Include="BaseSerivce.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
