--- a/SRV/ServiceInterface/ServiceInterface.csproj
+++ b/SRV/ServiceInterface/ServiceInterface.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="IArticleService.cs" />
     <Compile Include="IKeywordService.cs" />
+    <Compile Include="IRegisterService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
