--- a/YQBangMVC/Web.config
+++ b/YQBangMVC/Web.config
@@ -15,6 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <!--<sessionState timeout="1" mode="StateServer"></sessionState>-->
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
