--- a/YQBangMVC/YQBangMVC.csproj
+++ b/YQBangMVC/YQBangMVC.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
+    <Compile Include="Filter\PRGModelState.cs" />
+    <Compile Include="Filter\NeedLogon.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
